--- a/main.css
+++ b/main.css
@@ -1,43 +1,136 @@
+<style>
+* {
+  box-sizing: border-box;
+}
+
 body {
-    margin: 60px auto;
-    width: 70%;
+  font-family: Calibri; font-style: light;
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+
+button {
+  padding: 1px;
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
+
+a { text-decoration: none; color: none } /* Globally */
+
+/* Each state */
+
+a:visited { text-decoration: none; color: white; }
+a:hover { text-decoration: none; color: white; }
+a:focus { text-decoration: none; color: none; }
+a:hover, a:active { text-decoration: none; color: white; }
+
+/* Style the header */
+header {
+  background-color: #777;
+  padding: 25px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
 }
-a {
-    text-decoration: none;
-    color: #999;
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: right;
+  width: 20%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
 }
-a:hover {
-    text-decoration: underline;
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 100;
 }
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+.navbar {
+  overflow: hidden;
+  background-color: #333;
 }
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: orange;
+  text-align: center;
+  padding: 2px 2px;
+  text-decoration: orange;
 }
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 80%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
 footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
 }
-
-ul.posts li {
-    list-style: none;
-}
+</style>
