--- a/main.css
+++ b/main.css
@@ -107,7 +107,7 @@ article {
   padding: 20px;
   width: 80%;
   background-color: #f1f1f1;
-  height: auto; /* only for demonstration, should be removed */
+ /* only for demonstration, should be removed */
 }
 
 /* Clear floats after the columns */
