--- a/main.css
+++ b/main.css
@@ -132,3 +132,16 @@ footer {
     /* height: auto; only for demonstration, should be removed */
   }
 }
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
