--- a/main.css
+++ b/main.css
@@ -145,3 +145,9 @@ footer {
   clear: both;
   display: table;
 }
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
