--- a/main.css
+++ b/main.css
@@ -127,12 +127,9 @@ footer {
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
-  nav, article {
+  nav, article, .column {
     width: 100%;
     /* height: auto; only for demonstration, should be removed */
-  }
-  .column {
-    width: 100%;
   }
 }
 /* Three image containers (use 25% for four, and 50% for two, etc) */
