--- a/main.css
+++ b/main.css
@@ -145,3 +145,9 @@ footer {
   clear: both;
   display: table;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
