--- a/main.css
+++ b/main.css
@@ -151,3 +151,12 @@ footer {
   margin-right: auto;
   width: 50%;
 }
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
