--- a/main.css
+++ b/main.css
@@ -160,3 +160,9 @@ footer {
   left: 100%;
   margin-top: -1px;
 }
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column1 {
+  float: left;
+  width: 30%;
+  padding: 5px;
+}
